--- a/experiments/spectral_learning_of_hmm_with_perfect_basis.ipynb
+++ b/experiments/spectral_learning_of_hmm_with_perfect_basis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -31,9 +31,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[ 0.49999976  0.          0.          0.49999976  0.        ]]\n",
-      "[[ 0.99999905]]\n",
-      "[0, 3, 3, 3, 0, 3, 3, 0, 0, 0]\n"
+      "[[ 0.          0.          0.49999976  0.49999976  0.        ]\n",
+      " [ 0.          0.          0.33333322  0.33333322  0.33333322]\n",
+      " [ 0.          0.          0.          0.49999976  0.49999976]]\n",
+      "[[ 0.          0.          0.99999905]\n",
+      " [ 0.33333322  0.33333322  0.33333322]\n",
+      " [ 0.49999976  0.          0.49999976]]\n",
+      "[4, 4, 4, 3, 4, 4, 2, 4, 2, 4]\n"
      ]
     }
    ],
@@ -42,7 +46,7 @@
     "data_seed = np.random.randint(10000)\n",
     "np.random.seed(model_seed)\n",
     "\n",
-    "n_states = 1\n",
+    "n_states = 3\n",
     "n_obs = 5\n",
     "\n",
     "observations = range(n_obs)\n",
@@ -77,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -89,7 +93,7 @@
     "    for m in dimension_seq:\n",
     "        if e == 'single':\n",
     "            basis = single_obs_basis(hmm.observations, True)\n",
-    "            e = 'substring'\n",
+    "            e = 'prefix'\n",
     "        else:\n",
     "            basis = top_k_basis(training_data, np.inf, e)\n",
     "\n",
@@ -109,7 +113,7 @@
     "    for m in dimension_seq:\n",
     "        if e == 'single':\n",
     "            basis = single_obs_basis(hmm.observations, True)\n",
-    "            e = 'substring'\n",
+    "            e = 'prefix'\n",
     "        else:\n",
     "            basis = top_k_basis(training_data, np.inf, e)\n",
     "\n",
@@ -134,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -145,43 +149,43 @@
      "text": [
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "Estimated SVD with estimator string\n",
-      "Dimension:  1\n",
-      "Perplexity:  4.65785958405e+44\n",
+      "Dimension:  4\n",
+      "Perplexity:  23.0711206782\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "Estimated SVD with estimator prefix\n",
-      "Dimension:  1\n",
-      "Perplexity:  11.0044343935\n",
+      "Dimension:  6\n",
+      "Perplexity:  22.4673319476\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "Estimated SVD with estimator substring\n",
-      "Dimension:  2\n",
-      "Perplexity:  12.2071948741\n",
+      "Dimension:  6\n",
+      "Perplexity:  22.6417726011\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "Estimated SVD with estimator single\n",
-      "Dimension:  2\n",
-      "Perplexity:  12.2071948741\n",
+      "Dimension:  3\n",
+      "Perplexity:  21.4345320732\n",
       "^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "True SVD with estimator string\n",
-      "Dimension:  2\n",
-      "Perplexity:  3.19273084812e+16\n",
+      "Dimension:  6\n",
+      "Perplexity:  24.2904962374\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "True SVD with estimator prefix\n",
-      "Dimension:  1\n",
-      "Perplexity:  10.8317123547\n",
+      "Dimension:  4\n",
+      "Perplexity:  20.9011383949\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "True SVD with estimator substring\n",
-      "Dimension:  2\n",
-      "Perplexity:  11.9798606023\n",
+      "Dimension:  5\n",
+      "Perplexity:  23.6313182551\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n",
       "True SVD with estimator single\n",
-      "Dimension:  2\n",
-      "Perplexity:  11.9798606023\n",
+      "Dimension:  4\n",
+      "Perplexity:  20.9011383949\n",
       "@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@\n"
      ]
     }
@@ -239,7 +243,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   }
  },
  "nbformat": 4,
